@@ -31,6 +31,10 @@
 	without headers and comments and don't know what
 	it is.
 
+	Moved all uthash (key lists) related code into
+	keyhash.c, so nowhere will be used any HASH*
+	macros directly.
+
 0.1.4   Changed key format (again), now the main secret
 	is the ED25519 secret key, which will be encrypted.
 	Everything else will be derived from that. Thanks
